<resources>
    <string name="app_name">EduEase</string>
    <string name="name">NAME</string>
    <string name="professor">PROFESSOR</string>
    <string name="student">STUDENT</string>
    <string name="college">COLLEGE</string>
    <string name="courses_offered">COURSES OFFERED</string>
    <string name="dec">DEC</string>
    <string name="aec">AEC</string>
    <string name="emfw">EMFW</string>
    <string name="eem">EEM</string>
    <string name="act">ACT</string>
    <string name="daa">DAA</string>
    <string name="ds">DS</string>
    <string name="c">C</string>
    <string name="cpp">C++</string>
    <string name="java">JAVA</string>
    <string name="available_time">AVAILABLE TIME</string>
    <string name="short_time_discussions">SHORT TIME DISCUSSIONS</string>
    <string name="long_time_classes">LONG TIME CLASSES</string>
    <string name="both">BOTH</string>
    <string name="available_slot">AVAILABLE SLOT</string>
    <string name="time_in_hh_mm_24_hr_format">TIME in HH:MM (24-HR format)</string>
    <string name="done">DONE</string>
    <string name="title_activity_professor__login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="scheduled_meetings">SCHEDULED MEETINGS</string>
    <string name="from_time">FROM TIME</string>
    <string name="to_time">TO TIME</string>
    <string name="available_time_in_hh_mm">AVAILABLE TIME IN HH:MM</string>
    <string name="available_teachers">AVAILABLE TEACHERS</string>
    <string name="upcoming_meetings">UPCOMING MEETINGS</string>
    <string name="ask">ASK</string>
    <string name="student_name">Student Name</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log_in">LOG IN</string>

</resources>
