<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherDetail">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/nametxt"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:textSize="17sp"
            android:text="@string/name"
            />
        <TextView

            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:id="@+id/name"
            android:textSize="18sp"
            android:text="@string/name"
            android:layout_toRightOf="@id/nametxt"
            android:layout_toEndOf="@id/nametxt"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"/>

        <TextView
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/cllgtxt"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:textSize="17sp"
            android:layout_below="@id/nametxt"
            android:text="@string/college"
            />
        <TextView
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:id="@+id/cllg"
            android:textSize="18sp"
            android:layout_below="@id/name"
            android:text="@string/college"
            android:layout_toRightOf="@id/cllgtxt"
            android:layout_toEndOf="@id/cllgtxt"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"/>

        <TextView
            android:textStyle="bold"
            android:id="@+id/timetxt"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:textSize="17sp"
            android:layout_below="@id/cllgtxt"
            android:text="@string/available_time"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:layout_margin="13dp"
            android:id="@+id/time_to"
            android:textSize="18sp"
            android:layout_below="@id/cllg"
            android:text="@string/to_time"
            android:layout_toRightOf="@id/time_from"
            android:layout_toEndOf="@id/time_from"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="13dp"
            android:layout_height="25sp"
            android:id="@+id/time_from"
            android:textSize="18sp"
            android:layout_below="@id/cllg"
            android:text="@string/from_time"
            android:layout_toRightOf="@id/timetxt"
            android:layout_toEndOf="@id/timetxt"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin"/>



    </RelativeLayout>

       <Button
           android:id="@+id/ask"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ask" />
   </LinearLayout>

</ScrollView>