<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:padding="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="@string/name"
            android:textStyle="bold"
            android:textSize="18sp" />
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/time_from"
        android:textSize="18sp"
        android:paddingRight="24dp"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="@string/from_time" />
        <TextView
            android:id="@+id/time_to"
            android:textSize="18sp"
            android:paddingLeft="24dp"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="@string/to_time" />
</LinearLayout>


    </LinearLayout>
